ags (3.10.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* stripped unneeded code from utility functions

ags (3.9.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing use of destination_stride and source_stride fields
	* refactored ags_linear_interpolate_util.c
	* refactored ags_hq_pitch_util.c
	* refactored ags_fluid_interpolate_4th_order_util.c
	* refactored ags_fluid_interpolate_7th_order_util.c
	* refactored ags_fluid_iir_filter_util.c

ags (3.9.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved configure.ac and Makefile.am to handle absent gnulib
	* fixed missing files in meson.build
	* refactored ags_generic_pitch_util.c
	* refactored ags_fluid_interpolate_none_util.c
	* refactored ags_fluid_interpolate_linear_util.c
	* refactored ags_fast_pitch_util.c
	* TODO:JK: refactored ags_hq_pitch_util.c
	* TODO:JK: refactored ags_fluid_interpolate_4th_order_util.c
	* TODO:JK: refactored ags_fluid_interpolate_7th_order_util.c
	* TODO:JK: refactored ags_fluid_iir_filter_util.c
	* refactored ags_sf2_synth_util.c
	* refactored ags_sfz_synth_util.c
	* deprecated functions in ags_fast_pitch_util.h
	* deprecated functions in ags_fluid_interpolate_none_util.h
	* deprecated functions in ags_fluid_interpolate_linear_util.h
	* deprecated functions in ags_sf2_synth_util.h
	* deprecated functions in ags_sfz_synth_util.h

ags (3.9.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_fm_synth_util.c
	* fixed ags_synth_util.c
	* added unit-tests

ags (3.9.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: refactored ags_fm_synth_util.c
	* fixed ags_resample_util_test.c some uninitialized values

ags (3.9.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSolverMatrix missing getter/setter and parse
	* implemented AgsSolverVector missing getter/setter
	* implemented AgsSolverPolynomial missing getter/setter